link to script added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     
 </head>
 <body>
+    <p>To check the functions, <a href="script.js">click here</a></p>
     <div id="mocha"></div>
 
     <script>
